--- a/public/manifest.json
+++ b/public/manifest.json
@@ -36,6 +36,6 @@
     }],
     "theme_color": "#ffffff",
     "background_color": "#ffffff",
-    "start_url": "/",
+    "start_url": "/app/budget-tracker",
     "display": "standalone"
 }
